@@ -1,5 +1,12 @@
 2011-09-27  Andrew John Hughes  <ahughes@redhat.com>
 
+	* acinclude.m4:
+	(AC_CHECK_FOR_JDK): Look for IcedTea7 JDKs.
+	Don't check for IcedTea6 JDKs when bootstrapping
+	until PR716 is fixed.
+
+2011-09-27  Andrew John Hughes  <ahughes@redhat.com>
+
 	PR790: Include JAXP, JAF and JAXWS sources directly
 	in OpenJDK tree, removing the need for drop tarballs.
 	* INSTALL: Remove drop zip options.
